# ComfyUI-WildPromptor

./: README.md  README.zh-cn.md  README.zh-tw.md  WildPromptor.py  WildPromptorAI.py  WildPromptorAllInOne.py  WildPromptorGemini.py  WildPromptorGenerator.py  WildPromptorOllama.py  WildPromptorOllamaVision.py  __init__.py  config.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  publish_action.yml
AI/: WildPromptor_Enhancer.py
data/Clothing/: 1_0.casual.txt  1_1.athletic.txt  1_2.formal.txt  1_3.beach.txt  1_4.halloween.txt  1_5.goth.txt  1_6.sci_fi.txt  1_7.campy_horror.txt  1_8.western.txt  1_9.fantasy.txt  2_0.occupation.txt  2_1.occupation2.txt  2_2.all.txt
data/Collections/: 1_1.Prompt.txt  1_2.Realistic.txt  1_2_1.Realistic_male.txt  1_2_2.Realistic_female.txt  1_3.Anime.txt  1_4.Fantasy.txt  1_5.Pony.txt
data/Environment/: 1_1.Indoor.txt  1_2.Outdoor.txt  2_1.Builds.txt  2_3.Landscapes.txt  3_1.Chinese Lunar New Year.txt  3_2.Holiday Atmospheres.txt  3_3.Horror Environments.txt  3_4.Romantic Environments.txt  3_5.War Environments.txt  4_5.Special_Places.txt  4_7.Weather and Sky.txt  4_8.Historical Eras.txt  4_9.Future Scenes..txt
data/Illustrious/: 1_0.ArtStyle.txt
data/Location/: 1_0.house.txt  1_1.college_room.txt  1_2.college_public.txt  1_3.nature.txt  1_4.tourist.txt  1_5.public.txt  1_6.scifi.txt  1_7.campy_horror.txt  1_8.western.txt  1_9.fantasy.txt  2_0.vacation.txt  2_1.emo.txt  2_2.all.txt
py/: WildPromptor.py  WildPromptor_AllInOne.py  WildPromptor_Generator.py  WildPromptor_dataToPromptList.py
workflows/: WildPromptor_node_Samples.json  WildPromptor_v1.0.0_note_sample.json  prompt_list sample.json  simple AI prompt Enhancer (batch Output).json
(+40 files in other folders)
