[project]
name = "ComfyUI-WildPromptor"
description = "WildPromptor simplifies prompt creation, organization, and customization in ComfyUI, turning chaotic workflows into an efficient, intuitive process."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["google-generativeai","requests"]

[project.urls]
Repository = "https://github.com/1038lab/Comfyui_WildPromptor"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "AILab"
DisplayName = "ComfyUI-WildPromptor"
Icon = ""
